base/winapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vm-pool-windows-iis
spec:
  type: ClusterIP
  selector:
    kubevirt.io/vmpool: vm-pool-windows
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
    - protocol: TCP
      port: 8081
      targetPort: 8081
