base/winapp-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: vm-pool-windows-iis
  name: vm-pool-windows-iis
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: vm-pool-windows-iis
    weight: 100
